# spur

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  e2e.yml  jira-sync.yml  nightly.yml  pr-lint.yml  release.yml  set-e2e-pending.yml  test-connectivity.yml
crates/spur-cli/src/: main.rs  node.rs  sacctmgr.rs  sbatch.rs  scontrol.rs  sdiag.rs  sinfo.rs  sreport.rs  srun.rs  sshare.rs
crates/spur-core/src/: accounting.rs  config.rs  job.rs  node.rs  partition.rs  qos.rs  step.rs  wal.rs
crates/spur-k8s/: Cargo.toml
crates/spur-k8s/examples/: export_crd.rs
crates/spur-k8s/src/: heartbeat.rs  job_controller.rs  node_watcher.rs
crates/spur-metrics/: Cargo.toml
crates/spur-metrics/src/: lib.rs
crates/spur-metrics/tests/: job_export_golden.rs  node_export_golden.rs
crates/spur-tests/: Cargo.toml
crates/spur-tests/src/: lib.rs  t05_queue.rs  t06_cancel.rs  t07_sched.rs  t17_submit.rs  t21_acctmgr.rs  t50_core.rs  t55_format.rs
crates/spur-update/src/: check.rs  lib.rs
crates/spurctld/: Cargo.toml
crates/spurctld/src/: cluster.rs  fairshare_cache.rs  limits_cache.rs  main.rs  metrics_proto.rs  metrics_server.rs  scheduler_loop.rs  server.rs
crates/spurd/src/: agent_server.rs  main.rs  reporter.rs
deploy/: Dockerfile  Dockerfile.manylinux
docs/deployment/: kubernetes.rst
docs/developer/: building.rst
examples/: spur.conf
proto/: slurm.proto
tests/e2e/: README.md  cluster.py  conftest.py  pytest.ini  requirements.txt  test_container.py  test_gpu.py  test_multi_node.py
(+21 files in other folders)
